--- a/unsplash_clone/css/style.css
+++ b/unsplash_clone/css/style.css
@@ -1,42 +1,40 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
-
+    font-family: 'roboto', sans-serif;
 }
 
-.header-section{
+.header-section {
     width: 100%;
     height: 100vh;
     position: relative;
-    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(../img/bg-4.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../img/bg-4.jpg');
     background-size: cover;
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
 }
 
-.logo{
+.logo {
     font-size: 80px;
-    font-weight: 900;
+    font-weight: 400;
     color: #fff;
-    /* text-transform: capitalize; */
+    text-transform: capitalize;
 }
 
-.sub-line{
+.sub-line {
     color: #fff;
     padding: 20px 0 30px;
-    position: relative;
-    font-size: 30px;
+    font-size: 20px;
     text-transform: capitalize;
     word-spacing: 2px;
-    font-weight: 500;
+    position: relative;
+    font-weight: 300;
 }
 
-.sub-line::after{
+.sub-line::after {
     content: '';
     position: absolute;
     bottom: 0;
@@ -47,69 +45,218 @@
     background: #fff;
 }
 
-.sub-line::before{
+.sub-line::before {
     content: '';
     position: absolute;
     bottom: -5px;
-    background: #fff;
     left: 50%;
     transform: translateX(-50%);
     width: 10px;
     height: 10px;
-    border-radius: 10px;
-
+    background: #fff;
+    border-radius: 50%;
 }
 
-.search-box{
+/* .search-box {
     display: block;
-    margin: 50px auto 20px;
+    margin: 60px auto 20px;
     width: 100%;
     height: 40px;
+    border-radius: 5px;
     align-items: center;
     text-align: center;
-    border-radius: 6px;
-    padding: 20px;
+    padding: 10px;
     border: none;
     outline: none;
     text-transform: capitalize;
-}
-.search-btn{
-    padding: 10px 20px;
+} */
+
+.search-btn {
+    font-size: large;
+    font-weight: 700;
+    margin-top: 30px;
+    padding: 10px 30px;
     border-radius: 5px;
     text-transform: capitalize;
     border: none;
     outline: none;
-    font-weight: 700;
-    color: #fff;
     cursor: pointer;
     background: #0f0018c5;
+    color: #fff;
 }
 
-.gallery{
+/* gallery */
+
+.gallery {
     width: 100%;
-    padding: 10px;
-    background: #fff;
-    columns: 3;
-    column-gap: 10px;
+    padding: 40px;
+    background: rgb(0, 0, 0);
+    columns: 10;
+    column-gap: 15px;
 }
 
-.gallery-img{
+.gallery-img {
     width: 100%;
     height: 100%;
-    object-fit:cover;
-    margin-bottom: 10px;
-    border-radius: 5px;
-    background: #fff;
+    object-fit: cover;
+    margin-bottom: 20px;
+    border-radius: 4px;
+    cursor: pointer;
+    background: #f9f9f9;
 }
 
-@media  screen and (max-width:700px) {
+/* image popup */
 
-    .gallery{
+.image-popup {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 80%;
+    height: 80vh;
+    background: #f9f9f9;
+    box-shadow: 0px 5px 50px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+    transition: .5s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.image-popup.hide {
+    display: none;
+    opacity: 0;
+}
+
+.close-btn {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    width: 20px;
+    height: 20px;
+    background: #ff4f4f;
+    border-radius: 50%;
+    border: none;
+    cursor: pointer;
+}
+
+.download-btn {
+    text-transform: capitalize;
+    padding: 10px 20px;
+    background: #192f2e;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+    position: absolute;
+    right: 10px;
+    top: 10px;
+}
+
+.large-img {
+    height: 80%;
+    width: auto;
+    max-width: 80%;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+.controls {
+    background: none;
+    border: none;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    cursor: pointer;
+}
+
+.pre-btn {
+    left: 20px;
+}
+
+.nxt-btn {
+    right: 20px;
+}
+
+
+@media screen and (max-width:700px) {
+
+    .gallery {
         width: 100%;
         padding: 10px;
-        background: #fff;
+        background: rgb(0, 0, 0);
         columns: 1;
         column-gap: 10px;
     }
-    
+
+    .image-popup {
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 80%;
+        height: 60vh;
+        background: #f9f9f9;
+        box-shadow: 0px 5px 50px rgba(0, 0, 0, 0.25);
+        border-radius: 10px;
+        transition: .5s;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .close-btn {
+        position: absolute;
+        top: 5px;
+        left: 5px;
+        width: 15px;
+        height: 15px;
+        background: #ff4f4f;
+        border-radius: 50%;
+        border: none;
+        cursor: pointer;
+    }
+
+    .download-btn {
+        font-size: small;
+        text-transform: capitalize;
+        padding: 4px 5px;
+        background: #192f2e;
+        color: #fff;
+        text-decoration: none;
+        border-radius: 5px;
+        position: absolute;
+        right: 5px;
+        top: 5px;
+    }
+
+
+
+    .image-popup.hide {
+        display: none;
+        opacity: 0;
+    }
+
+    .pre-btn {
+        left: 5px;
+    }
+
+    .nxt-btn {
+        right: 5px;
+    }
+
+    .search-btn {
+        padding: 10px 30px;
+        border-radius: 5px;
+        text-transform: capitalize;
+        border: none;
+        outline: none;
+        cursor: pointer;
+        background: #0f0018c5;
+        color: #fff;
+    }
+
+    .search {
+        margin-left: 30px;
+    }
+
 }
