--- a/gerich-restaurant/src/components/Navbar/Navbar.css
+++ b/gerich-restaurant/src/components/Navbar/Navbar.css
@@ -19,6 +19,7 @@
 
 .app__navbar-logo img{
     width: 150px;
+    cursor: pointer;
 }
 
 .app__navbar-links{
@@ -75,5 +76,64 @@
     background:var(--color-black);
     transition: 0.5s ease;
     flex-direction: column;
+    z-index: 5;
 }
 
+.app__navbar-smallscreen_overlay .overlay__close{
+    font-size: 27px;
+    color: var(--color-golden);
+    cursor: pointer;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+}
+
+.app__navbar-smallscreen_links{
+    list-style: none ;
+
+}
+
+.app__navbar-smallscreen_links li{
+    margin: 2.4rem;
+    cursor: pointer;
+    color: var(--color-golden);
+    font-size: 2rem;
+    text-align: center;
+    font-family: var(--font-base);
+}
+
+.app__navbar-smallscreen_links li:hover{
+    color: var(--color-white);
+}
+
+@media screen and (max-width:2000px) {
+    .app__navbar-logo img{
+        width: 210px;
+    }
+    
+}
+
+@media screen and (max-width:1150px) {
+    .app__navbar-links{
+        display: none;
+    }
+
+    .app__navbar-smallscreen{
+        display: flex;
+    }
+    
+}
+
+@media screen and (max-width:650px){
+
+    .app__navbar-login{
+        display: none;
+    }
+
+    .app__navbar-logo img{
+        width: 110px;
+        display: flex;
+        margin-right: 10rem;
+        
+    }
+}
